fix: scrollspy color in dark mode

--- a/assets/styl/Theme/Dark/App/Main/Post/Permalink/Post/Scrollspy.styl
+++ b/assets/styl/Theme/Dark/App/Main/Post/Permalink/Post/Scrollspy.styl
@@ -7,4 +7,5 @@ html[data-theme='dark']
           a
             color alpha($THEME_COLOR_WHITE, .8)
           &.uk-active
-            color $THEME_COLOR_WHITE
+            a
+              color $THEME_COLOR_WHITE
